[css-flexbox] Apply min-height: auto to nested flexboxes again

To avoid the previous regression (see analysis in bug), we force
layout in the case where we otherwise would get an outdated result.

This relands https://chromium-review.googlesource.com/c/chromium/src/+/1246730
with an additional fix for the Chrome UI CSS. I also split out the
test change into its own patch.

IF THIS BREAKS ANY FURTHER CHROME UI:
Please don't revert this patch; instead, add min-height: 0 to any
inner nested flexboxes that may be affected by this patch. This is
an important change for web interop with the other browsers.

Bug: 596743,890100
Change-Id: Ice629c2a7823ef07d075fa23b99022b4012c6200
Reviewed-on: https://chromium-review.googlesource.com/1252682
Reviewed-by: Wenzhao (Colin) Zang <wzang@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Commit-Queue: Christian Biesinger <cbiesinger@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595225}
Former-commit-id: f033b7d2fc1c1a44006a9c30afc864abc9e7571b